# sphinxcontrib-adadomain

./: .gitignore  .gitlab-ci.yml  CHANGES  Makefile  README.rst  mypy.ini  pyproject.toml  setup.py
examples/base_example/: Makefile  README.md  conf.py  index.rst  pkg.rst
examples/base_example/prj/: pkg.ads
laldoc/: pyproject.toml  setup.py
laldoc/laldoc/: generate_rst.py
sphinxcontrib/: adadomain.py
testsuite/: testsuite.py
testsuite/tests/base_test/: pkg.rst  test.out  test.yaml
testsuite/tests/generic_package_decl/: pkg.ads  test.out
testsuite/tests/null_subp_decl/: pkg.ads  test.out
testsuite/tests/package_renaming_decl/: pkg.ads  test.out
testsuite/tests/record_type/: pkg.ads  test.out  test.yaml
