[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "laldoc"
version = "0.1"
authors = [
    {name = "AdaCore", email = "report@adacore.com"}
]
maintainers = [
    {name = "AdaCore", email = "report@adacore.com"}
]
description = 'Libadalang-based Ada source extractor for documentation'

[tool.setuptools]
packages = ["laldoc"]
py-modules = ['__init__']
