[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "laldoc"
version = "0.1"
authors = [
    {name = "AdaCore", email = "support@adacore.com"}
]
maintainers = [
    {name = "AdaCore", email = "support@adacore.com"}
]
description = 'Libadalang-based Ada source extractor for documentation'

[tool.setuptools]
packages = ["laldoc"]
py-modules = ['__init__']
